--- a/homework/00/index.html
+++ b/homework/00/index.html
@@ -22,6 +22,10 @@
         height: 100%;
       }
     </style>
+     <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.110.0/build/three.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/three@0.110.0/examples/js/loaders/OBJLoader.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/three@0.110.0/examples/js/loaders/MTLLoader.js"></script> -->
+
     <script src="lib/three.js" defer></script>
     <script src="lib/OrbitControls.js" defer></script>
     <script type="text/javascript" src="lib/MTLLoader.js" defer></script>
