--- a/homework/01/index.html
+++ b/homework/01/index.html
@@ -1,3 +1,8 @@
+<!--
+ * @Author: linkenzone
+ * @Date: 2022-04-14 21:52:25
+ * @Descripttion: Do not edit
+-->
 <!DOCTYPE html>
 <html>
 
@@ -18,6 +23,10 @@
             height: 100%;
         }
     </style>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.110.0/build/three.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.110.0/examples/js/loaders/OBJLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.110.0/examples/js/loaders/MTLLoader.js"></script> -->
+
     <script src="lib/three.js" defer></script>
     <script src="lib/OrbitControls.js" defer></script>
     <script src="lib/gl-matrix-min.js" defer></script>
